test/files/neg/plugin-after-terminal/lib/plugins.jar.desired.sha1
b27d9a4cc768179da1d43f77dff631f900f050d0 ?plugins.jar
